* Increase timeout while waiting for new cloud connection to become available to 60 seconds (Bug #36140)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54837 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-daemon (4.0.3-16) unstable; urgency=low
+
+  * Increase timeout while waiting for new cloud connection to become
+    available to 60 seconds (Bug #36140)
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 22 Oct 2014 17:36:45 +0200
+
 univention-virtual-machine-manager-daemon (4.0.3-15) unstable; urgency=low
 
   * Improve texts regarding EC2 connections (Bug #36143)
