--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.8-1) unstable; urgency=low
+
+  * Bug #35927: Add .univention_install file
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 22 Oct 2014 17:47:55 +0200
+
 univention-dvd (0.2.7-2) unstable; urgency=low
 
   * Added several packages for zarafa/z-push App (Bug #36204) 
