* Make the joinscript fail on a DC Slave if no S4 Connector service   is registered by a DC Master or DC Backup. This can be overridden   by setting samba4/provision/secondary=yes (Bug #35983).
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54840 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,11 @@
+univention-samba4 (4.0.0-8) unstable; urgency=medium
+
+  * Make the joinscript fail on a DC Slave if no S4 Connector service
+    is registered by a DC Master or DC Backup. This can be overridden
+    by setting samba4/provision/secondary=yes (Bug #35983).
+
+ -- Arvid Requate <requate@univention.de>  Wed, 22 Oct 2014 18:25:07 +0200
+
 univention-samba4 (4.0.0-7) unstable; urgency=medium
 
   * Adjust samba4 detection criterion to Samba 4.2 (Bug #35319)
