Bug #35654: initiate host menu with fqdn Bug #35654: width parameter is obsolete Bug #35654: allow to give a container to render.layout
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54844 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-frontend (4.1.65-1) unstable; urgency=medium
+
+  * Bug #35654: initiate host menu with fqdn
+  * Bug #35654: width parameter is obsolete
+  * Bug #35654: allow to give a container to render.layout
+
+ -- Florian Best <best@univention.de>  Wed, 22 Oct 2014 21:42:08 +0200
+
 univention-management-console-frontend (4.1.64-1) unstable; urgency=medium
 
   Bug #35654:
