Bug #35985: rename pam_unix option min to minlen, remove pam option max as it does not exists
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54848 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console (7.1.13-1) unstable; urgency=medium
+
+  * Bug #35985: rename pam_unix option min to minlen, remove pam option max as
+  	it does not exists
+
+ -- Florian Best <best@univention.de>  Thu, 23 Oct 2014 02:55:54 +0200
+
 univention-management-console (7.1.12-4) unstable; urgency=low
 
   * Bug #33241: Revert
