* Also remove 05univention-system-setup.list while removing   univention-system-setup-boot (Bug #36038)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54849 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.1.27-1) unstable; urgency=medium
+
+  * Also remove 05univention-system-setup.list while removing
+    univention-system-setup-boot (Bug #36038)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 23 Oct 2014 06:25:32 +0200
+
 univention-system-setup (8.1.26-1) unstable; urgency=medium
 
   * Download packages only if the system has not yet joined (Bug #36038)
