--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.62-1) unstable; urgency=medium
+
+  * Bug #35654: added .svg image file for tooltip arrows
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 23 Oct 2014 10:17:53 +0200
+
 univention-management-console-frontend-theme (0.0.61-1) unstable; urgency=medium
 
   Bug #35654:
