--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,10 @@
+univention-lib (4.0.3-6) unstable; urgency=low
+
+  * Bug #36278: Fix time sync when locale is set to non-English
+  * Bug #36280: Replace function from apt that has been removed
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 23 Oct 2014 11:09:08 +0200
+
 univention-lib (4.0.3-5) unstable; urgency=medium
 
   * Add shell/samba.sh (Bug #35319)
