Bug #35654: version bump
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54855 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-diagnostic/debian/changelog
+++ b/management/univention-management-console-module-diagnostic/debian/changelog
@@ -1,6 +1,12 @@
+univention-management-console-module-diagnostic (1.0.7-2) unstable; urgency=medium
+
+  * Bug #35654: version bump
+
+ -- Florian Best <best@univention.de>  Thu, 23 Oct 2014 11:32:03 +0200
+
 univention-management-console-module-diagnostic (1.0.7-1) unstable; urgency=low
 
-  * Bug #35864: Add PLugin docstring, inherit from dgrid instead of
+  * Bug #35864: Add Plugin docstring, inherit from dgrid instead of
   	GalleryPane, add some misssing translations, outsource CSS into external
   	file
 
