--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (4.0.3-7) unstable; urgency=low
+
+  * Bug #36280: Remove unneeded comparison against Samba version
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 23 Oct 2014 11:37:38 +0200
+
 univention-lib (4.0.3-6) unstable; urgency=low
 
   * Bug #36278: Fix time sync when locale is set to non-English
