* Add URL to manual for no virtualization infrastructure alert (Bug #36132)   * Update URL for network configuration interface wizard   * Fix "cloud instances" default filter for no virtualization found (Bug #36138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54857 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,11 @@
+univention-virtual-machine-manager-daemon (4.0.3-17) unstable; urgency=low
+
+  * Add URL to manual for no virtualization infrastructure alert (Bug #36132)
+  * Update URL for network configuration interface wizard
+  * Fix "cloud instances" default filter for no virtualization found (Bug #36138)
+
+ -- Andreas Peichert <peichert@univention.de>  Thu, 23 Oct 2014 11:25:40 +0200
+
 univention-virtual-machine-manager-daemon (4.0.3-16) unstable; urgency=low
 
   * Increase timeout while waiting for new cloud connection to become
