Bug #34765: fix noDataMessage
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54859 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-diagnostic/debian/changelog
+++ b/management/univention-management-console-module-diagnostic/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-diagnostic (1.0.8-1) unstable; urgency=medium
+
+  * Bug #34765: fix noDataMessage
+
+ -- Florian Best <best@univention.de>  Thu, 23 Oct 2014 11:53:35 +0200
+
 univention-management-console-module-diagnostic (1.0.7-2) unstable; urgency=medium
 
   * Bug #35654: version bump
