--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.63-1) unstable; urgency=low
+
+  * Bug #35654: adjusted styling of tooltips
+
+ -- Johannes Keiser <keiser@univention.de>  Thu, 23 Oct 2014 13:26:11 +0200
+
 univention-management-console-frontend-theme (0.0.62-1) unstable; urgency=medium
 
   * Bug #35654: added .svg image file for tooltip arrows
