Bug #35654: * adjust styling for disabled widgets * adjust error icon * adjust styling for NumberSpinner * adjust paddings for TooltipDialog
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54863 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,13 @@
+univention-management-console-frontend-theme (0.0.64-1) unstable; urgency=medium
+
+  Bug #35654:
+  * adjust styling for disabled widgets
+  * adjust error icon
+  * adjust styling for NumberSpinner
+  * adjust paddings for TooltipDialog
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 23 Oct 2014 15:15:05 +0200
+
 univention-management-console-frontend-theme (0.0.63-1) unstable; urgency=low
 
   * Bug #35654: adjusted styling of tooltips
