Bug #36281: remove this module, show the options to reboot/shutdown the server in the UMC menu
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54864 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-reboot/debian/changelog
+++ b/management/univention-management-console-module-reboot/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-reboot (4.1.2-1) unstable; urgency=medium
+
+  * Bug #36281: remove this module, show the options to reboot/shutdown the
+  	server in the UMC menu
+
+ -- Florian Best <best@univention.de>  Thu, 23 Oct 2014 14:23:18 +0200
+
 univention-management-console-module-reboot (4.1.1-2) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
