--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.66-1) unstable; urgency=medium
+
+  * Bug #36281: add app.addMenuEntry()
+
+ -- Florian Best <best@univention.de>  Thu, 23 Oct 2014 15:15:30 +0200
+
 univention-management-console-frontend (4.1.65-1) unstable; urgency=medium
 
   * Bug #35654: initiate host menu with fqdn
