--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.3-18) unstable; urgency=low
+
+  * Add progressbar for create instance wizard (Bug #36144)
+
+ -- Andreas Peichert <peichert@univention.de>  Thu, 23 Oct 2014 15:53:46 +0200
+
 univention-virtual-machine-manager-daemon (4.0.3-17) unstable; urgency=low
 
   * Add URL to manual for no virtualization infrastructure alert (Bug #36132)
