* On a DC Backup the joinscript also needs to be called with admin   credentials, so don't call it in postinst (Bug #36284)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54870 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba (9.0.4-1) unstable; urgency=medium
+
+  * On a DC Backup the joinscript also needs to be called with admin
+    credentials, so don't call it in postinst (Bug #36284)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 23 Oct 2014 16:06:51 +0200
+
 univention-samba (9.0.3-3) unstable; urgency=medium
 
   * Handle smb.conf and shares.conf 4.2 changes in samba-shares listener
