* Adapted package to UCS 4 (Bug #36092)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54871 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-cloud-init/debian/changelog
+++ b/services/univention-cloud-init/debian/changelog
@@ -1,3 +1,15 @@
+univention-cloud-init (2.0.0-5) unstable; urgency=low
+
+  * Adapted package to UCS 4 (Bug #36092) 
+
+ -- Erik Damrose <damrose@univention.de>  Thu, 23 Oct 2014 16:16:10 +0200
+
+univention-cloud-init (2.0.0-4) unstable; urgency=low
+
+  * Copy from UCS 3.2 (Bug #36092)
+
+ -- Erik Damrose <damrose@univention.de>  Thu, 23 Oct 2014 14:35:13 +0200
+
 univention-cloud-init (1.0.0-3) unstable; urgency=low
 
   * Bug #35236: Add build dependency on univention-management-console-dev 
