--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-frontend-theme (0.0.65-1) unstable; urgency=medium
+
+  Bug #35654:
+  * add border around MultiSelect widget
+  * overwrite opacity for disabled combo buttons in the header
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 23 Oct 2014 21:29:41 +0200
+
 univention-management-console-frontend-theme (0.0.64-1) unstable; urgency=medium
 
   Bug #35654:
