--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.68-1) unstable; urgency=medium
+
+  * Bug #35654: fix problems with rendering of dojo grids on hidden tabs
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 23 Oct 2014 22:32:46 +0200
+
 univention-management-console-frontend (4.1.67-1) unstable; urgency=medium
 
   * Bug #35654: adjust LabelPane to allow for positioning above the widget
