Bug #36279: Update linux kernel
3.16.5-1 ucs83

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54882 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/kernel/univention-kernel-image/debian/changelog
+++ b/kernel/univention-kernel-image/debian/changelog
@@ -1,3 +1,9 @@
+univention-kernel-image (8.0.4-1) unstable; urgency=low
+
+  * Bug #36279: Update linux kernel
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 24 Oct 2014 00:58:16 +0200
+
 univention-kernel-image (8.0.3-1) unstable; urgency=low
 
   * Bug #34437: Recommend CPU microcode updates.
