--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (5.1.10-1) unstable; urgency=medium
+
+  * Bug #35654: remove header from NewObjectDialog and adjust height
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 24 Oct 2014 03:00:03 +0200
+
 univention-management-console-module-udm (5.1.9-1) unstable; urgency=medium
 
   * Bug #23665: show user picture more prominently
