* Bug #35654: fix size class for MixedInput
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54885 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.70-1) unstable; urgency=medium
+
+  * Bug #35654: fix size class for MixedInput
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 24 Oct 2014 03:00:49 +0200
+
 univention-management-console-frontend (4.1.69-1) unstable; urgency=medium
 
   Bug #35654:
