--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.28-1) unstable; urgency=medium
+
+  * Bug #35654: adjust wizard height automatically
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 24 Oct 2014 03:01:58 +0200
+
 univention-system-setup (8.1.27-1) unstable; urgency=medium
 
   * Also remove 05univention-system-setup.list while removing
