Fixed last commit (Bug #36178)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54892 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-printserver/debian/changelog
+++ b/services/univention-printserver/debian/changelog
@@ -1,3 +1,9 @@
+univention-printserver (8.0.4-4) unstable; urgency=low
+
+  * Fixed last commit (Bug #36178) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 24 Oct 2014 09:37:22 +0200
+
 univention-printserver (8.0.4-3) unstable; urgency=low
 
   * Added dependencies to printer-driver packages (Bug #36178) 
