--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.70-2) unstable; urgency=medium
+
+  * Bug #36291: display labels of some widgets on top
+
+ -- Florian Best <best@univention.de>  Fri, 24 Oct 2014 10:49:55 +0200
+
 univention-management-console-frontend (4.1.70-1) unstable; urgency=medium
 
   * Bug #35654: fix size class for MixedInput
