* Bug #35653: Fix ldap/base when being UCS Master as AD Member
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54897 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.28-2) unstable; urgency=low
+
+  * Bug #35653: Fix ldap/base when being UCS Master as AD Member
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 24 Oct 2014 11:08:21 +0200
+
 univention-system-setup (8.1.28-1) unstable; urgency=medium
 
   * Bug #35654: adjust wizard height automatically
