--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.8-2) unstable; urgency=low
+
+  * Bug #35974: Change GRUB colors
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 24 Oct 2014 09:34:44 +0200
+
 univention-dvd (0.2.8-1) unstable; urgency=low
 
   * Bug #35927: Add .univention_install file
