Bug #35654: auto pep8
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54899 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (7.1.14-1) unstable; urgency=medium
+
+  * Bug #35654: auto pep8
+
+ -- Florian Best <best@univention.de>  Fri, 24 Oct 2014 11:41:09 +0200
+
 univention-management-console (7.1.13-1) unstable; urgency=medium
 
   * Bug #35985: rename pam_unix option min to minlen, remove pam option max as
