Bug #35974 DVD: Change GRUB colors
GRUB themes use the SVG-1.0 color names; see
<http://www.w3.org/TR/css3-color/#svg-color>

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54900 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.8-3) unstable; urgency=low
+
+  * Bug #35974: Change GRUB colors
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 24 Oct 2014 12:43:35 +0200
+
 univention-dvd (0.2.8-2) unstable; urgency=low
 
   * Bug #35974: Change GRUB colors
