Bug #35654: outsource startup checks into the modules
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54902 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.26-2) unstable; urgency=medium
+
+  * Bug #35654: implement startup checks
+
+ -- Florian Best <best@univention.de>  Fri, 24 Oct 2014 13:17:33 +0200
+
 univention-updater (10.0.25-1) unstable; urgency=low
 
   * Autoremove packages in postup (Bug #36265) 
