--- a/management/univention-join/debian/changelog
+++ b/management/univention-join/debian/changelog
@@ -1,3 +1,9 @@
+univention-join (7.1.0-5) unstable; urgency=medium
+
+  * Bug #35654: implement startup checks
+
+ -- Florian Best <best@univention.de>  Fri, 24 Oct 2014 13:19:06 +0200
+
 univention-join (7.1.0-4) unstable; urgency=low
 
   * Copy dns/forwarder settings from master
