--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.70-3) unstable; urgency=medium
+
+  * Bug #35654: move startup checks into specific modules
+
+ -- Florian Best <best@univention.de>  Fri, 24 Oct 2014 13:20:12 +0200
+
 univention-management-console-frontend (4.1.70-2) unstable; urgency=medium
 
   * Bug #36291: display labels of some widgets on top
