--- a/management/univention-management-console-module-reboot/debian/changelog
+++ b/management/univention-management-console-module-reboot/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-reboot (4.1.2-2) unstable; urgency=medium
+
+  * Bug #35654: implement startup checks
+
+ -- Florian Best <best@univention.de>  Fri, 24 Oct 2014 13:19:37 +0200
+
 univention-management-console-module-reboot (4.1.2-1) unstable; urgency=medium
 
   * Bug #36281: remove this module, show the options to reboot/shutdown the
