--- a/management/univention-management-console-module-reboot/umc/js/de.po
+++ b/management/univention-management-console-module-reboot/umc/js/de.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: univention-management-console-module-reboot\n"
 "Report-Msgid-Bugs-To: packages@univention.de\n"
-"POT-Creation-Date: 2014-10-23 14:37+0200\n"
+"POT-Creation-Date: 2014-10-24 13:08+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -12,10 +12,18 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: umc/js/reboot.js:51
+#: umc/js/reboot.js:53
 msgid "Reboot server"
 msgstr "Server neustarten"
 
-#: umc/js/reboot.js:43
+#: umc/js/reboot.js:45
 msgid "Shutdown server"
 msgstr "Server herunterfahren"
+
+#: umc/js/reboot.js:63 umc/js/reboot.js:64
+msgid ""
+"This system has been updated recently. Please reboot this system to finish "
+"the update."
+msgstr ""
+"Dieses System wurde kürzlich aktualisiert. Ein Neustart des Systems "
+"ist erforderlich, um das Update abzuschließen."
