--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-daemon (4.0.3-19) unstable; urgency=low
+
+  * Add frontend checks to test a new cloud connection before adding it
+    permanently (Bug #36136)
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 24 Oct 2014 13:29:55 +0200
+
 univention-virtual-machine-manager-daemon (4.0.3-18) unstable; urgency=low
 
   * Add progressbar for create instance wizard (Bug #36144)
