* Update translations (Bug #32842)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54905 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.3-20) unstable; urgency=low
+
+  * Update translations (Bug #32842) 
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 24 Oct 2014 14:13:40 +0200
+
 univention-virtual-machine-manager-daemon (4.0.3-19) unstable; urgency=low
 
   * Add frontend checks to test a new cloud connection before adding it
