--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.71-1) unstable; urgency=medium
+
+  * Bug #35654: fixed logic for hiding subtabs in TabController
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 24 Oct 2014 14:41:22 +0200
+
 univention-management-console-frontend (4.1.70-3) unstable; urgency=medium
 
   * Bug #35654: move startup checks into specific modules
