Bug #35654: * fix CSS class handling, remove unnecessary CSS classes * add prefixed baseClasses of enclosed widgets to LabelPane domNode * remove obsolete class umc/widgets/Toaster
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54909 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,12 @@
+univention-management-console-frontend (4.1.72-1) unstable; urgency=medium
+
+  Bug #35654:
+  * fix CSS class handling, remove unnecessary CSS classes
+  * add prefixed baseClasses of enclosed widgets to LabelPane domNode
+  * remove obsolete class umc/widgets/Toaster
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 24 Oct 2014 15:43:09 +0200
+
 univention-management-console-frontend (4.1.71-1) unstable; urgency=medium
 
   * Bug #35654: fixed logic for hiding subtabs in TabController
