--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.67-1) unstable; urgency=medium
+
+  * Bug #35654: adjust generic padding of form fields
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 24 Oct 2014 15:51:33 +0200
+
 univention-management-console-frontend-theme (0.0.66-1) unstable; urgency=medium
 
   * Bug #35654: adjust error icon, add search icon
