--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,11 @@
+univention-system-setup (8.1.29-1) unstable; urgency=medium
+
+  Bug #35654:
+  * adjust padding of radio buttons
+  * adjust icon displaying on small screens
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 24 Oct 2014 15:52:02 +0200
+
 univention-system-setup (8.1.28-2) unstable; urgency=low
 
   * Bug #35653: Fix ldap/base when being UCS Master as AD Member
