* Bug #36161: Adaptions for new psutil API
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54912 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-top/debian/changelog
+++ b/management/univention-management-console-module-top/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-top (4.1.0-3) unstable; urgency=low
+
+  * Bug #36161: Adaptions for new psutil API
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 24 Oct 2014 16:09:55 +0200
+
 univention-management-console-module-top (4.1.0-2) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
