--- a/virtualization/univention-virtual-machine-manager-schema/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-schema/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-schema (5.0.1-6) unstable; urgency=low
+
+  * Bug #36253: Move EC2 connection support to seperate package
+    univention-virtual-machine-manager-cloud-ec2 
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 24 Oct 2014 16:21:46 +0200
+
 univention-virtual-machine-manager-schema (5.0.1-5) unstable; urgency=low
 
   * Bug #35656 UVMM: Drop Xen support
