--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.8-6) unstable; urgency=low
+
+  * Bug #35974: Change GRUB colors
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 24 Oct 2014 16:43:04 +0200
+
 univention-dvd (0.2.8-5) unstable; urgency=low
 
   * Bug #35974: Change GRUB colors
