* Bug #36291: fixed handling of sizing for ComplexInput/MultiInput
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54924 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.69-1) unstable; urgency=medium
+
+  * Bug #36291: fixed handling of sizing for ComplexInput/MultiInput
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 24 Oct 2014 17:44:06 +0200
+
 univention-management-console-frontend-theme (0.0.68-1) unstable; urgency=medium
 
   * Bug #36263: add additional umcDynamicHeight classes
