* [WIP] css adaptations on ucs startsite (Bug #36095)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54926 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (7.0.3-1) unstable; urgency=low
+
+  * [WIP] css adaptations on ucs startsite (Bug #36095)
+
+ -- Johannes Keiser <keiser@univention.de>  Fri, 24 Oct 2014 18:48:54 +0200
+
 univention-apache (7.0.2-2) unstable; urgency=low
 
   * [WIP] continued working on redesign of ucs-overview (Bug #36095)
