Bug #23665: fix image max-height
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54935 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (5.1.12-3) unstable; urgency=medium
+
+  * Bug #23665: fix image max-height
+
+ -- Florian Best <best@univention.de>  Mon, 27 Oct 2014 09:15:42 +0100
+
 univention-management-console-module-udm (5.1.12-2) unstable; urgency=medium
 
   * Bug #36263: adjust grid height with displayed tree
