--- a/services/univention-net-installer/debian/changelog
+++ b/services/univention-net-installer/debian/changelog
@@ -1,3 +1,13 @@
+univention-net-installer (8.0.0-1) unstable; urgency=low
+
+  * version bump for UCS 4.0-0 (Bug #35537)
+  * updated copyright entries
+  * fixed debian/rules
+  * increased compat level to 9
+  * added missing dependencies
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 23 Oct 2014 17:53:41 +0200
+
 univention-net-installer (7.0.2-3) unstable; urgency=low
 
   * add multithreading to univention-net-installer-daemon (Bug #1156)
