Bug #35537: removed property reinstalltext from computers/domaincontroller_* and computers/memberserver
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54938 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (10.0.21-1) unstable; urgency=low
+
+  * Bug #35537: removed property "reinstalltext" from
+    computers/domaincontroller_* and computers/memberserver
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 23 Oct 2014 18:10:20 +0200
+
 univention-directory-manager-modules (10.0.20-1) unstable; urgency=medium
 
   Bug #36291
