Bug #36269: univention-repository-create is know able to handle UCS 4 DVDs
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54939 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.27-1) unstable; urgency=low
+
+  * univention-repository-create is know able to handle UCS 4 DVDs (Bug #36269)
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 24 Oct 2014 17:59:14 +0200
+
 univention-updater (10.0.26-2) unstable; urgency=medium
 
   * Bug #35654: implement startup checks
