--- a/services/univention-net-installer/debian/changelog
+++ b/services/univention-net-installer/debian/changelog
@@ -1,3 +1,10 @@
+univention-net-installer (8.0.0-2) unstable; urgency=low
+
+  * adapted listener module serverinstallerpxe.py for debian installer
+    (Bug #35537)
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 24 Oct 2014 15:43:17 +0200
+
 univention-net-installer (8.0.0-1) unstable; urgency=low
 
   * version bump for UCS 4.0-0 (Bug #35537)
