* Bug #36253: Moved EC2 connection support to separate source package
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54943 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-schema/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-schema/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-schema (5.0.1-8) unstable; urgency=low
+
+  * Bug #36253: Moved EC2 connection support to separate source package 
+
+ -- Erik Damrose <damrose@univention.de>  Mon, 27 Oct 2014 10:57:10 +0100
+
 univention-virtual-machine-manager-schema (5.0.1-7) unstable; urgency=low
 
   * Bug #36253: Move EC2 connection support to seperate package
