Bug #36296: added shop icon
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54946 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.70-1) unstable; urgency=medium
+
+  * Bug #36296: added shop icon
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 27 Oct 2014 11:37:33 +0100
+
 univention-management-console-frontend-theme (0.0.69-1) unstable; urgency=medium
 
   * Bug #36291: fixed handling of sizing for ComplexInput/MultiInput
