--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.1.12-1) unstable; urgency=medium
+
+  * Bug #36296: added shop icon
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 27 Oct 2014 11:41:58 +0100
+
 univention-management-console-module-appcenter (4.1.11-1) unstable; urgency=medium
 
   * Bug #35654: move install button to the left
