--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.71-1) unstable; urgency=medium
+
+  * Bug #36263: remove height rules for dijitTree
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 27 Oct 2014 12:06:34 +0100
+
 univention-management-console-frontend-theme (0.0.70-1) unstable; urgency=medium
 
   * Bug #36296: added shop icon
