* Bug #36261: adjusted textarea default size
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54949 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.72-1) unstable; urgency=medium
+
+  * Bug #36261: adjusted textarea default size
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 27 Oct 2014 12:19:14 +0100
+
 univention-management-console-frontend-theme (0.0.71-1) unstable; urgency=medium
 
   * Bug #36263: remove height rules for dijitTree
