Bug #35537: net netboot installer to DVD
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54954 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.9-1) unstable; urgency=low
+
+  * Bug #35537: net netboot installer to DVD
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 27 Oct 2014 14:30:58 +0100
+
 univention-dvd (0.2.8-7) unstable; urgency=low
 
   * Bug #35974: Change GRUB colors
