* Bug #36300: change text fields in quota module
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54955 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-quota/debian/changelog
+++ b/base/univention-quota/debian/changelog
@@ -1,3 +1,9 @@
+univention-quota (9.1.2-1) unstable; urgency=low
+
+  * Bug #36300: change text fields in quota module
+
+ -- Alexander Kramer <kramer@univention.de>  Mon, 27 Oct 2014 12:39:39 +0100
+
 univention-quota (9.1.1-1) unstable; urgency=low
 
   * Bug #35654: show buttons in the module header
