* Bug #36286: reload udm_modules listener to update the python-support   .public files to python2.7
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54956 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (10.0.22-1) unstable; urgency=medium
+
+  * Bug #36286: reload udm_modules listener to update the python-support
+    .public files to python2.7
+
+ -- Arvid Requate <requate@univention.de>  Mon, 27 Oct 2014 15:08:16 +0100
+
 univention-directory-manager-modules (10.0.21-1) unstable; urgency=low
 
   * Bug #35537: removed property "reinstalltext" from
