Bug #36268 DVD: Remove Debian specific files
Explicitly link files from wheezy which we want on the DVD.

Fix GPG key used to check signatures: 3x is till used.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54960 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.10-1) unstable; urgency=low
+
+  * Bug #36268: Remove Debian specific files
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 27 Oct 2014 14:33:06 +0100
+
 univention-dvd (0.2.9-1) unstable; urgency=low
 
   * Bug #35537: net netboot installer to DVD
