--- a/services/univention-pkgdb/debian/changelog
+++ b/services/univention-pkgdb/debian/changelog
@@ -1,3 +1,9 @@
+univention-pkgdb (8.1.1-1) unstable; urgency=medium
+
+  * Bug #35367: Fix import error
+
+ -- Arvid Requate <requate@univention.de>  Mon, 27 Oct 2014 15:57:50 +0100
+
 univention-pkgdb (8.1.0-4) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
