* [WIP] adaption of ucs-overview : changed style of dropdown menu   (Bug #36095)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54963 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,10 @@
+univention-apache (7.0.3-3) unstable; urgency=low
+
+  * [WIP] adaption of ucs-overview : changed style of dropdown menu
+    (Bug #36095)
+
+ -- Drees Dormann <dormann@univention.de>  Mon, 27 Oct 2014 16:01:11 +0100
+
 univention-apache (7.0.3-2) unstable; urgency=low
 
   * [WIP] adaption of ucs-overview : adapted language selection box
