* Bug #35367: Fix import error
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54966 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-pkgdb/debian/changelog
+++ b/services/univention-pkgdb/debian/changelog
@@ -1,3 +1,9 @@
+univention-pkgdb (7.0.11-8) unstable; urgency=medium
+
+  * Bug #35367: Fix import error
+
+ -- Arvid Requate <requate@univention.de>  Mon, 27 Oct 2014 16:19:06 +0100
+
 univention-pkgdb (7.0.11-7) unstable; urgency=low
 
   * version bump (Bug #34723)
