* Bug #36301: adapted some labels in the mail domain module
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54970 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (10.0.23-1) unstable; urgency=low
+
+  * Bug #36301: adapted some labels in the mail domain module
+
+ -- Alexander Kramer <kramer@univention.de>  Mon, 27 Oct 2014 16:49:06 +0100
+
 univention-directory-manager-modules (10.0.22-1) unstable; urgency=medium
 
   * Bug #36286: reload udm_modules listener to update the python-support
