* Bug #35654: adjusted dijit menu arrow icon
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54972 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.73-1) unstable; urgency=medium
+
+  * Bug #35654: adjusted dijit menu arrow icon
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 27 Oct 2014 17:11:48 +0100
+
 univention-management-console-frontend-theme (0.0.72-1) unstable; urgency=medium
 
   * Bug #36261: adjusted textarea default size
