* 20_appcenter/17_app_status: perform 'non-strict' check of the servers     list where apps are installed. (Bug #35652)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54973 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (5.0.38-1) unstable; urgency=low
+
+  * 20_appcenter/17_app_status: perform 'non-strict' check of the servers
+    list where apps are installed. (Bug #35652)
+
+ -- Dmitry Galkin <galkin@univention.de>  Mon, 27 Oct 2014 17:11:42 +0100
+
 ucs-test (5.0.37-1) unstable; urgency=medium
 
   * 00_base/26check_logfiles_general: Ignore kdm.log permissions
