--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.10-3) unstable; urgency=low
+
+  * Bug #35537: Fix hook script directory
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 27 Oct 2014 17:20:48 +0100
+
 univention-dvd (0.2.10-2) unstable; urgency=low
 
   * Bug #36268: Fix broken symlinks
