--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.74-1) unstable; urgency=medium
+
+  * Bug #36310: underline button label when button is focussed
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 27 Oct 2014 17:25:16 +0100
+
 univention-management-console-frontend-theme (0.0.73-1) unstable; urgency=medium
 
   * Bug #35654: adjusted dijit menu arrow icon
