--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,12 @@
+univention-management-console-frontend (4.1.75-1) unstable; urgency=medium
+
+  Bug #35654:
+  * remove obsolete menu icon classes
+  * add Uploader baseClass
+  * fix typo
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 27 Oct 2014 17:28:18 +0100
+
 univention-management-console-frontend (4.1.74-1) unstable; urgency=medium
 
   * Bug #36128: resize title of GalleryItems dynamically if too large
