Bug #35537 DVD: Fix hook script directory
/usr/share/univention-dvd/{start_disc -> disc_start}_hook.d/

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54977 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.10-4) unstable; urgency=low
+
+  * Bug #35537: Fix hook script directory
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 27 Oct 2014 17:35:55 +0100
+
 univention-dvd (0.2.10-3) unstable; urgency=low
 
   * Bug #35537: Fix hook script directory
