Bug #36095: * adjusted sticky footer * adjusted background styling * adjusted media queries for entries
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54978 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,12 @@
+univention-apache (7.0.4-1) unstable; urgency=low
+
+  Bug #36095:
+  * adjusted sticky footer
+  * adjusted background styling
+  * adjusted media queries for entries
+
+ -- Johannes Keiser <keiser@univention.de>  Mon, 27 Oct 2014 17:38:58 +0100
+
 univention-apache (7.0.3-3) unstable; urgency=low
 
   * [WIP] adaption of ucs-overview : changed style of dropdown menu
